[gd_scene load_steps=7 format=3 uid="uid://c21vgrvnj0hrt"]

[ext_resource type="Script" path="res://Entety/Plains/Teleport/ToLevelTeleporter/to_level_teleporter.gd" id="1_4bxhn"]
[ext_resource type="Texture2D" uid="uid://ckjmjyydop8ka" path="res://Entety/Plains/Exit/ExitToAnotherLevel/Exit.png" id="1_vc5iq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vywjj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vc5iq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_05lh1"]
radius = 11.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rc33m"]

[sub_resource type="ViewportTexture" id="ViewportTexture_dauto"]

[node name="Area2D" type="Area2D"]
monitorable = false
script = ExtResource("1_4bxhn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vywjj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_05lh1")

[node name="LevelSelection" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -250.0
offset_right = 448.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rc33m")

[node name="MenuBar" type="MenuBar" parent="LevelSelection"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 40.0

[node name="Levels" type="PopupMenu" parent="LevelSelection/MenuBar"]
item_count = 1
item_0/text = "111"
item_0/id = 0

[node name="TextureRect" type="TextureRect" parent="LevelSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -201.0
offset_right = 201.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_dauto")
expand_mode = 1

[node name="Area" type="Label" parent="LevelSelection"]
layout_mode = 0
offset_left = 666.0
offset_top = 72.0
offset_right = 738.0
offset_bottom = 95.0
text = "Area: 200"

[node name="TotalMoves" type="Label" parent="LevelSelection"]
layout_mode = 0
offset_left = 666.0
offset_top = 88.0
offset_right = 814.0
offset_bottom = 111.0
text = "Total Moves: 20000"

[node name="CountofDeath" type="Label" parent="LevelSelection"]
layout_mode = 0
offset_left = 666.0
offset_top = 106.0
offset_right = 814.0
offset_bottom = 129.0
text = "Count of death: 20"

[node name="CountofTeleport" type="Label" parent="LevelSelection"]
layout_mode = 0
offset_left = 666.0
offset_top = 123.0
offset_right = 826.0
offset_bottom = 146.0
text = "Count of teleport: 20"

[connection signal="id_pressed" from="LevelSelection/MenuBar/Levels" to="." method="_on_levels_id_pressed"]
